--- a/snakeMake/metaGenomeAnalysis/envs/concoct.yaml
+++ b/snakeMake/metaGenomeAnalysis/envs/concoct.yaml
@@ -1,9 +1,9 @@
 channels:
+    - anaconda
     - bioconda
     - conda-forge
-    - defaults
 dependencies:
     - concoct=1.1.0
     - bwa=0.7.17
     - samtools=1.9
-    - numpy=1.8.2
+    - numpy=1.15.4
