--- a/snakeMake/metaGenomeAnalysis/envs/bin3c.yaml
+++ b/snakeMake/metaGenomeAnalysis/envs/bin3c.yaml
@@ -3,3 +3,6 @@ channels:
 dependencies:
     - python=2.7
     - samtools=1.9
+source:
+    - git_url: https://github.com/cerebis/bin3C.git
+    - folder: bin3c
